--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,19 +1,28 @@
-FROM node:18 AS build
+# ใช้ Node.js เป็น base image
+FROM node:20
 
+# ตั้งค่า working directory
 WORKDIR /usr/src/app
 
-COPY package*.json ./
-RUN npm install
+# คัดลอก package.json และ package-lock.json
+COPY package.json ./
 
+# ติดตั้ง dependencies
+RUN npm install --force
+
+# คัดลอกโค้ดทั้งหมดไปยัง container
 COPY . .
+
+# สร้างไฟล์ .env โดยสุ่มค่าต่าง ๆ
+RUN echo "REACT_APP_DEV_URL=http://$PUBLIC_IP:1337" >> .env && \
+    echo "REACT_APP_STRIPE_APP_KEY=$(openssl rand -hex 32)" >> .env && \
+    echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=$(openssl rand -hex 32)" >> .env
+
+# Build the app
 RUN npm run build
 
-FROM nginx:1.27.3
+# Expose port
+EXPOSE 3000
 
-COPY default.conf /etc/nginx/conf.d/default.conf
-
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# Start the app
+CMD ["npm", "start"]
