--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,6 +10,8 @@ COPY package.json ./
 # ติดตั้ง dependencies
 RUN npm install --force
 
+RUN npm install sweetalert2 --force
+
 # คัดลอกโค้ดทั้งหมดไปยัง container
 COPY . .
 
