--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Install Dependencies and Run Frontend Tests
         run: |
-          docker exec test-frontend-container sh -c "npm install --force && npm run test"
+          docker exec test-frontend-container sh -c "npm install --force && npm install sweetalert2 --force && npm run test"
 
       - name: Frontend Cleanup
         if: always()
