--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,11 @@ jobs:
       
       # Build Docker Compose services
       - name: Build and start services
-        run: docker-compose up --build -d
+        run: 
+          sudo curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          echo docker-compose version
+          docker-compose up --build -d
 
       # Run tests
       - name: Run frontend tests
