--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,7 +60,7 @@ jobs:
           # Define instance details
           INSTANCE_ID=$(aws ec2 run-instances \
             --image-id ami-06b21ccaeff8cd686 \
-            --instance-type t2.micro \
+            --instance-type t2.medium \
             --key-name ${{ secrets.AWS_KP_NAME }} \
             --security-group-ids ${{ secrets.AWS_SG_ID }} \
             --user-data file://user-data.sh \
