--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,10 @@
 name: CD - Deploy to EC2 with Docker (Human trigger)
 
 on:
-  push:
-    branches:
-      - '*'
+  workflow_run:
+    workflows: ["CI - Backend and Frontend Docker Testing"]
+    types:
+      - completed
       
 
 jobs:
