--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI - Backend and Frontend Docker Testing
 
 on:
-  # push:
-  #   branches:
-  #     - '*'
-  workflow_dispatch:
+  push:
+    branches:
+      - '*'
+  # workflow_dispatch:
 
 jobs:
   backend-build-and-test:
@@ -18,11 +18,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       
-      - name: Build and Push Backend Docker Image
+      - name: Build Backend Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/cs360_backend_image_test:latest -f backend/Dockerfile .
+
+      - name: Push Backend Docker Image
+        run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/cs360_backend_image_test:latest
-      
+
+
       - name: Pull and Run Backend Container
         run: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/cs360_backend_image_test:latest
@@ -54,11 +58,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and Push Frontend Docker Image
+      - name: Build Frontend Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest -f client/Dockerfile .
+          
+      - name: Push Frontend Docker Image
+        run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
-
+      
       - name: Pull and Run Frontend Container
         run: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
