--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,7 @@ RUN npm install --force
 COPY backend/public ./public
 COPY backend/src ./src
 COPY backend/routes ./sroute
+COPY backend/tests ./tests
 
 # สร้างไฟล์ .env โดยสุ่มค่าต่าง ๆ
 RUN echo "HOST=0.0.0.0" >> .env && \
