--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,11 +11,12 @@ COPY backend/package*.json ./
 RUN npm install --force
 
 # คัดลอกโค้ดทั้งหมดไปยัง container
-COPY backend/public ./public
-COPY backend/src ./src
-COPY backend/routes ./route
-COPY backend/mockConfig ./mockConfig
-COPY backend/tests ./tests
+# COPY backend/public ./public
+# COPY backend/src ./src
+# COPY backend/routes ./route
+# COPY backend/mockConfig ./mockConfig
+COPY . .
+
 
 # สร้างไฟล์ .env โดยสุ่มค่าต่าง ๆ
 RUN echo "HOST=0.0.0.0" >> .env && \
@@ -33,10 +34,13 @@ RUN echo "HOST=0.0.0.0" >> .env && \
 RUN npm run build
 
 # ติดตั้ง serve เพื่อ serve static files
-RUN npm install -g serve
+COPY --from=build /usr/src/app/node_modules ./node_modules
+
+# คัดลอกไฟล์โค้ดทั้งหมด (รวมไฟล์ build)
+COPY --from=build /usr/src/app .
 
 # เปิด port ที่ต้องการ
 EXPOSE 1337
 
-# Start the app using serve
-CMD ["serve", "-s", "build", "-l", "1337"]
+# เริ่มแอป Strapi
+CMD ["npm", "start"]
