--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,35 @@
-# Stage 1: Build Stage
+# ใช้ Node.js เป็น base image
 FROM node:20 AS build
 
 # กำหนด Working Directory
 WORKDIR /usr/src/app
-COPY backend/package*.json ./
+
+# คัดลอกไฟล์ package.json และ package-lock.json
+COPY package.json package-lock.json ./
+
+# ติดตั้ง dependencies
 RUN npm install --force
+
+# คัดลอกไฟล์โค้ดทั้งหมด
 COPY . .
+
+# สร้างไฟล์ build (ใช้สำหรับ Production)
 RUN npm run build
 
-# Stage 2: Production Stage
+# ใช้ Alpine Linux เพื่อรันแอปใน Production
 FROM node:20
+
+# กำหนด Working Directory
 WORKDIR /usr/src/app
-COPY --from=build /usr/src/app/dist ./dist  
-COPY --from=build /usr/src/app/node_modules ./node_modules 
+
+# คัดลอก Dependencies จาก stage build มา
+COPY --from=build /usr/src/app/node_modules ./node_modules
+
+# คัดลอกไฟล์โค้ดทั้งหมด (รวมไฟล์ build)
+COPY --from=build /usr/src/app .
+
+# เปิดพอร์ต (Strapi ใช้พอร์ตเริ่มต้น 1337)
 EXPOSE 1337
+
+# เริ่มแอป Strapi
 CMD ["npm", "start"]
