--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /usr/src/app
 COPY backend/package*.json ./
 
 # ติดตั้ง dependencies
-RUN npm install --force
+RUN npm install -g npm@10.9.1 --force
 
 # คัดลอกโค้ดทั้งหมดไปยัง container
 COPY backend/mockConfig ./mockConfig
