--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,10 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/cs360_backend_image_test:latest \
             tail -f /dev/null
       
-      # - name: Run Backend Tests
-      #   run: |
-      #     docker ps
-      #     docker exec test-backend-container sh -c "npm install --force && npm run test"
+      - name: Run Backend Tests
+        run: |
+          docker ps
+          docker exec test-backend-container npm run test
 
       - name: Backend Cleanup
         if: always()
