--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,6 +18,7 @@ COPY client/babel.config.js ./babel.config.js
 
 # สร้างไฟล์ .env 
 RUN echo "REACT_APP_DEV_URL=http://$PUBLIC_IP:1337" >> .env && \
+    sed -i 's/:3000//g' .env && \
     echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
     echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
 
