--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,11 +15,9 @@ COPY client/public ./public
 COPY client/src ./src
 COPY client/babel.config.js ./babel.config.js
 
-RUN PUBLIC_IP=$(curl -s ifconfig.me)
-RUN REACT_APP_DEV_URL="http://$PUBLIC_IP:1337" 
-
 # สร้างไฟล์ .env 
-RUN echo "REACT_APP_DEV_URL=$REACT_APP_DEV_URL" >> .env && \
+RUN export PUBLIC_IP=$(curl -s ifconfig.me) && \
+    echo "REACT_APP_DEV_URL=http://$PUBLIC_IP:1337" >> .env && \
     echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
     echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
 
