--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "strapi start",
     "build": "strapi build",
     "test": "jest --coverage",
-    "test-back": "jest account.test.js",
+    "test-back": "jest backend/tests/account.test.js",
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
