--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,8 +16,8 @@ COPY client/src ./src
 COPY client/babel.config.js ./babel.config.js
 
 # สร้างไฟล์ .env 
-RUN export PUBLIC_IP=$(curl -s ifconfig.me) && \
-    echo "REACT_APP_DEV_URL=http://$PUBLIC_IP:1337" >> .env && \
+# RUN export PUBLIC_IP=$(curl -s ifconfig.me) && \
+RUN echo "REACT_APP_DEV_URL=http://$INSTANCE_PUBLIC_IP:1337" >> .env && \
     echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
     echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
 
