--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -94,11 +94,12 @@ jobs:
           REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key
           EOT
           echo ".env file created successfully."
-
+          cat .env
+          
       # Step 7: Deploy Frontend Docker Container
       - name: Deploy Frontend Docker Container
         run: |
-          docker run -d --name frontend-container \
+          docker run -d --name cs360_frontend_container \
             --env-file .env \
             -p 3000:3000 \
             ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
