--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -113,4 +113,6 @@ jobs:
             --env-file .env \
             -p 3000:3000 \
             ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
+          sudo docker ps -a
+          sudo docker logs cs360_frontend_container
           echo "Frontend container deployed successfully."
