--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -93,19 +93,8 @@ jobs:
           EOT
           echo ".env file created successfully."
           cat .env
-
-      # # Step 6: Create .env File for Frontend
-      # - name: Create .env File for Frontend
-      #   run: |
-      #     cat <<EOT > .env
-      #     REACT_APP_DEV_URL=http://$INSTANCE_PUBLIC_IP:1337
-      #     REACT_APP_STRIPE_APP_KEY=dummy_key
-      #     REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key
-      #     EOT
-      #     echo ".env file created successfully."
-      #     cat .env
           
-      # Step 7: Deploy Frontend Docker Container
+      # Step 5: Deploy Frontend Docker Container
       - name: Deploy Frontend Docker Container
         run: |
           cat .env
@@ -115,4 +104,5 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
           sudo docker ps -a
           sudo docker logs cs360_frontend_container
+          sudodocker inspect cs360_frontend_container
           echo "Frontend container deployed successfully."
