--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -88,6 +88,11 @@ jobs:
 
       # Step 5: Deploy Frontend Docker Container
       - name: Deploy Frontend Docker Container on EC2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
           INSTANCE_PUBLIC_IP=$(aws ec2 describe-instances \
             --instance-ids $INSTANCE_ID \
