--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -95,8 +95,8 @@ jobs:
           cat .env
 
           sudo docker run -d --name cs360_frontend_container \
-          --env-file .env \ -p 3000:3000 \
-          ${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
+          --env-file .env \
+          -p 3000:3000 \${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
           sudo docker ps -a
           sudo docker logs cs360_frontend_container
           sudo docker exec cs360_frontend_container printenv
