--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -99,7 +99,7 @@ jobs:
           -p 3000:3000 \${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
           sudo docker ps -a
           sudo docker logs cs360_frontend_container
-          sudo docker exec cs360_frontend_container .env
+          sudo docker exec cs360_frontend_container find / -name ".env"
 
           echo "successfully."
 
