--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -100,6 +100,7 @@ jobs:
           sudo docker ps -a
           sudo docker logs cs360_frontend_container
           sudo docker exec cs360_frontend_container find / -name ".env"
+          sudo docker exec cs360_frontend_container cat /usr/src/app/.env
 
           echo "successfully."
 
