--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,11 +5,12 @@ on:
     workflows: ["CI - Backend and Frontend Docker Testing"]
     types:
       - completed
-    
+
   push:
     branches:
       - '*'
-      
+
+  
 
 jobs:
   check-image-and-deploy:
@@ -55,6 +56,7 @@ jobs:
         run: echo "AWS credentials set."
 
       # Step 4: Create EC2 Instance and Deploy the Application
+      # REACT_APP_DEV_URL=http://$INSTANCE_PUBLIC_IP:1337
       - name: Create EC2 Instance and Deploy the Application
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -99,11 +101,9 @@ jobs:
           -p 3000:3000 \${{ secrets.DOCKER_USERNAME }}/cs360_frontend_image_test:latest
           sudo docker ps -a
           sudo docker logs cs360_frontend_container
-          sudo docker exec cs360_frontend_container find / -name ".env"
+          
           sudo docker exec cs360_frontend_container cat /usr/src/app/.env
+          sudo docker cp .env cs360_frontend_container: /usr/src/app/.env
+          sudo docker exec -it cs360_frontend_container cat /usr/src/app/.env
 
           echo "successfully."
-
-          
-          
-         
