--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,11 +16,11 @@ COPY client/src ./src
 COPY client/babel.config.js ./babel.config.js
 
 # สร้างไฟล์ .env 
-# RUN echo "REACT_APP_DEV_URL=http://$INSTANCE_PUBLIC_IP:1337" >> .env && \
-#     echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
-#     echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
+RUN echo "REACT_APP_DEV_URL=http://0.0.0.0:1337" >> .env && \
+    echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
+    echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
 
-# RUN cat .env
+RUN cat .env
 # Build the app
 RUN npm run build
 
