--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,11 +16,13 @@ COPY client/src ./src
 COPY client/babel.config.js ./babel.config.js
 
 # สร้างไฟล์ .env 
-RUN echo "REACT_APP_DEV_URL=http://ec2-xx-xx-xx-xx.compute-1.amazonaws.com:1337" >> .env && \
-    echo "REACT_APP_STRIPE_APP_KEY=dummy_key" >> .env && \
-    echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=dummy_key" >> .env
+# RUN apk add --no-cache openssl && \
+#     echo "REACT_APP_DEV_URL=http://localhost:1337" >> .env && \
+#     echo "REACT_APP_STRIPE_APP_KEY=$(openssl rand -hex 32)" >> .env && \
+#     echo "REACT_APP_STRIPE_PUBLISHABLE_KEY=$(openssl rand -hex 32)" >> .env
 
-RUN cat .env
+# RUN cat .env
+
 # Build the app
 RUN npm run build
 
