--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,9 +6,9 @@ on:
     types:
       - completed
 
-  push:
-    branches:
-      - '*'
+  # push:
+  #   branches:
+  #     - '*'
 
   
 
@@ -86,3 +86,4 @@ jobs:
             --query 'Reservations[0].Instances[0].PublicIpAddress' \
             --output text)
           echo "Instance Public IP: $INSTANCE_PUBLIC_IP"
+
