--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,7 +12,7 @@ RUN npm install --force
 
 # คัดลอกไฟล์โค้ดทั้งหมด
 COPY backend/ .
-COPY backend/mockConfig /usr/src/app/backend/mockConfig
+# COPY backend/mockConfig /usr/src/app/backend/mockConfig
 
 # สร้างไฟล์ .env โดยสุ่มค่าต่าง
 RUN apk add --no-cache openssl && \
@@ -47,4 +47,4 @@ COPY --from=build /usr/src/app ./
 EXPOSE 1337
 
 # เริ่มแอป Strapi
-CMD ["npm", "start"]
+CMD ["npm", "run", "develop"]
