--- a/.github/workflows/CI-CD_Pipeline.yml
+++ b/.github/workflows/CI-CD_Pipeline.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   CI_backend-build-and-test:
+    name: CI - Backend Docker Testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -48,6 +49,7 @@ jobs:
           docker rm test-backend-container || true
 
   CI-frontend-build-and-test:
+    name: CI - Frontend Docker Testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -86,8 +88,11 @@ jobs:
           docker rm test-frontend-container || true
 
   CD:
+    name: CD - Deploy to EC2 with Docker
     runs-on: ubuntu-latest
-
+    needs:
+      - CI_backend-build-and-test
+      - CI-frontend-build-and-test
     steps:
       # Step 1: Checkout code
       - name: Checkout Repository
