--- a/.github/workflows/CI-CD_Pipeline.yml
+++ b/.github/workflows/CI-CD_Pipeline.yml
@@ -147,7 +147,7 @@ jobs:
             --instance-type t2.medium \
             --key-name ${{ secrets.AWS_KP_NAME }} \
             --security-group-ids ${{ secrets.AWS_SG_ID }} \
-            --user-data file://user-data.sh \
+            --user-data file://<(sed "s/{{DOCKER_USENAME}}/${{ secrets.DOCKER_USERNAME }}/g; s/{{INSTANCE_ID}}/$INSTANCE_ID/g" user-data.sh) \
             --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=MyInstanceName}]' \
             --query 'Instances[0].InstanceId' \
             --output text)
